fix : trying to remove the scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -281,7 +281,16 @@ html {
   scroll-behavior: smooth;
 
 }
+html, body {
+  overflow: auto; /* Ensure scrolling is enabled */
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* Internet Explorer and Edge */
+}
 
+/* Chrome, Safari, and Edge */
+html::-webkit-scrollbar, body::-webkit-scrollbar {
+  display: none;
+}
 /* 
 .novel-editor:focus {
   outline: none !important;
